--- a/templates/result.html
+++ b/templates/result.html
@@ -1,8 +1,8 @@
-Sukupuoli {{ sex }}
+Sex {{ sex }}
 <p>
-Dieetti {{ diet }}
+Diet {{ diet }}
 <p>
-Ikä {{ age }}
+Age {{ age }}
 <p></p>
 Total hours water-only fasted before this test: {{ hours }}
 <p></p>
@@ -16,4 +16,4 @@ HDL Cholesterol: {{ hdl }}
 <p></p>
 Triglycerides: {{ trigly }}
 
-<a href="/">Back</a>
+<a href="/mypage">Back</a>
