--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,7 @@
     <p class="lead">
         <a class="btn btn-outline-secondary btn-lg" href="/info" role="button">Learn more</a>
     </p>
+    <p>Labs Submitted {{ count }}</p>
 </div>
 <body>
     <section class="hero is-info is-fullheight">
