--- a/templates/result.html
+++ b/templates/result.html
@@ -1,3 +1,5 @@
+<h3>{{ lab_name }}</h3>
+
 Sex {{ sex }}
 <p>
 Diet {{ diet }}
@@ -14,6 +16,6 @@ LDL Cholesterol: {{ ldl }}
 <p></p>
 HDL Cholesterol: {{ hdl }}
 <p></p>
-Triglycerides: {{ trigly }}
-
+Triglycerides: {{ trigly }} <br>
+<p></p>
 <a href="/mypage">Back</a>
