--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -1,5 +1,5 @@
 {% if session.user_id %}
-Hello {{ session.username }}.<br>
+Hello {{ result }}.<br>
 You can submit your labs and make queries<br>
 <a href="/submitlabs">Submit Labs</a> | <a href="/logout">Logout</a>
 {% else %}
