--- a/templates/login.html
+++ b/templates/login.html
@@ -45,7 +45,7 @@
     <div class="checkbox">
         <label><input type="checkbox"> Remember me</label>
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-default">Login</button>
 </form>
 </div>
 </div>
