--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,8 @@
         <a class="btn btn-outline-secondary btn-lg" href="/info" role="button">Learn more</a>
     </p>
     <p>Labs Submitted {{ count }}</p>
+    <p>Avarage values: </p>
+    <p>Total {{ total }} LDL {{ ldl }} HDL {{ hdl }} Trgilycerides {{ triglyt }}</p>
 </div>
 <body>
     <section class="hero is-info is-fullheight">
