--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
     </p>
     <p>Labs Submitted {{ count }}</p>
     <p>Avarage values: </p>
-    <p>Total {{ total }} LDL {{ ldl }} HDL {{ hdl }} Trgilycerides {{ triglyt }}</p>
+    <p>Total {{ total }} LDL {{ ldl }} HDL {{ hdl }} Triglycerides {{ triglyt }}</p>
 </div>
 <body>
     <section class="hero is-info is-fullheight">
