Standard deviation added

--- a/templates/query.html
+++ b/templates/query.html
@@ -42,7 +42,9 @@
                     <option value="higher">Over 3</option>
                     <option value="all_crp">All</option>
                     </select>
-                <p>      
+                <p> 
+                    By clicking "Submit" you acknowledge this in no way constitutes medical advice.<br>
+                    <p></p>
                     <input type="submit" value="Submit"> | <a href="/mypage">Back</a>  
         </form>
 {% else %}
