--- a/templates/query.html
+++ b/templates/query.html
@@ -23,6 +23,14 @@
             <option value="all_ages">All</option>
             </select>
             <p>
+                Choose diet:
+                <select name="diet">
+                    <option value="">Select Diet</option>
+                    <option value="LCHF">LCHF (20g to 120g carbs)</option>
+                    <option value="keto">Keto (less than 50g carbs)</option>
+                    <option value="zero">Carnivore (aka zero carbs)</option>
+                    </select>
+                    <p></p>
                 Hours fasted:
                 <select name="hours_fasted">
                 <option value="">Select Hours Fasted</option>
@@ -43,6 +51,13 @@
                     <option value="all_crp">All</option>
                     </select>
                 <p> 
+                    Units of measurement:
+                    <select name="units">
+                    <option value="">Select Units</option>    
+                    <option value="usa">mg/dL (Common for USA)</option>
+                    <option value="int">mmol/L (Common for International)</option>
+                    </select>
+                <p>
                     By clicking "Submit" you acknowledge this in no way constitutes medical advice.<br>
                     <p></p>
                     <input type="submit" value="Submit"> | <a href="/mypage">Back</a>  
