--- a/templates/submitlabs.html
+++ b/templates/submitlabs.html
@@ -55,9 +55,10 @@
             <option value="higher">Over 3, I have some inflammation</option>
             </select>
         <p>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit"> <a href="/mypage">Back</a>
             <p>
     </form>
+
 {% else %}
 <a href="/login">Log in</a>
 {% endif %}
