--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
     </p>
     <p>Labs Submitted {{ count }}</p>
     <p>Avarage values: </p>
-    <p>Total {{ total }} LDL {{ ldl }} HDL {{ hdl }} Triglycerides {{ triglyt }}</p>
+    <p>Total {{ total|round(1, 'common') }} LDL {{ ldl|round(1, 'common') }} HDL {{ hdl|round(1, 'common') }} Triglycerides {{ triglyt|round(1, 'common') }}</p>
 </div>
 <body>
     <section class="hero is-info is-fullheight">
