--- a/templates/results.html
+++ b/templates/results.html
@@ -1,5 +1,5 @@
 {% for result in lab_name %}
-<h3>{{ result[0] }}<br></h3>
+<h3>{{ result[0] }}</h3>
 {{ result[1] }}<br>
 {{ result[2] }}<br>
 {{ result[3] }}<br>
@@ -10,6 +10,8 @@
 {{ result[8] }}<br>
 {{ result[9] }}<br>
 {{ result[10] }}<br>
+{{ apu }}
+{{ apu2 }}
 <p></p>
 
 {% endfor %}
