--- a/templates/login.html
+++ b/templates/login.html
@@ -14,15 +14,17 @@
     <p class="lead">
         <a class="btn btn-outline-secondary btn-lg" href="/info" role="button">Learn more</a>
     </p>
-    <p>Labs Submitted {{ count }}</p>
+    {% for result in averages %}
+    <p>Labs Submitted {{ result[0] }}</p>
     <p>Avarage values: </p>
-    <p>Total {{ total|round(1, 'common') }} LDL {{ ldl|round(1, 'common') }} HDL {{ hdl|round(1, 'common') }} Triglycerides {{ triglyt|round(1, 'common') }}</p>
+    <p>Total {{ result[1]|round(1, 'common') }} LDL {{ result[2]|round(1, 'common') }} HDL {{ result[3]|round(1, 'common') }} Triglycerides {{ result[4]|round(1, 'common') }}</p>
+    {% endfor %}
 </div>
 <body>
     <section class="hero is-info is-fullheight">
 <div class="container">
     <div class="columns is-left">
-        <div class="column is-full">
+        <div class="column is-one-third is-offset-one-third">
 <form action="/login" method="post">
     <div class="field">
         
@@ -52,7 +54,7 @@
 </div>
 </div>
 <p></p>
-New user? Register <a href="/register">here</a>
+<div class="column is-one-third is-offset-one-third">New user? Register <a href="/register" style="color:#080808;">here</a>
 </div>
     </section>
 </body>
