--- a/templates/query.html
+++ b/templates/query.html
@@ -8,23 +8,23 @@
     </header>
     <p> 
         Choose gender:
-        <select name="sex">
-        <option value="">Select Gender</option>
+        <select required name="sex">
+        <option value="">Choose Gender</option>
         <option value="Male">Male</option>
         <option value="Female">Female</option>
         </select>
         <p>
             Choose age:
             <select name="age">
-            <option value="">Select Age</option>
+            <option value="all_ages">All</option>
             <option value="under">10-39</option>
             <option value="40to59">40-59</option>
             <option value="over60">Over 60</option>
-            <option value="all_ages">All</option>
+            
             </select>
             <p>
                 Choose diet:
-                <select name="diet">
+                <select required name="diet">
                     <option value="">Select Diet</option>
                     <option value="LCHF">LCHF (20g to 120g carbs)</option>
                     <option value="keto">Keto (less than 50g carbs)</option>
@@ -33,26 +33,26 @@
                     <p></p>
                 Hours fasted:
                 <select name="hours_fasted">
-                <option value="">Select Hours Fasted</option>
+                <option value="all_hours">All</option>
                 <option value="under">Less than 12 Hours</option>
                 <option value="between">12-14 Hours</option>
                 <option value="over">Over 14 Hours</option>
-                <option value="all_hours">All</option>
+                
                 </select>
                 <p></p>
                 
                 <p>
                     Choose CRP:
                     <select name="crp">
-                    <option value="">Select CRP</option>
+                    <option value="all_crp">All</option>
                     <option value="good">Below 1.0</option>
                     <option value="normal">Between 1-3</option>
                     <option value="higher">Over 3</option>
-                    <option value="all_crp">All</option>
+                    
                     </select>
                 <p> 
                     Units of measurement:
-                    <select name="units">
+                    <select required name="units">
                     <option value="">Select Units</option>    
                     <option value="usa">mg/dL (Common for USA)</option>
                     <option value="int">mmol/L (Common for International)</option>
