--- a/templates/submitlabs.html
+++ b/templates/submitlabs.html
@@ -5,20 +5,20 @@
     </header>
     <p>
         Give a name for this lab:<br>
-        <textarea name="lab_name" rows="1" cols="200"></textarea>
+        <textarea name="lab_name" required rows="1" cols="50"></textarea>
     </p>
     <p>
-        <input type="radio" name="sex" value="1"> Male
-        <input type="radio" name="sex" value="2"> Female
-        <input type="radio" name="sex" value="3"> Unspecified
+        <input type="radio" name="sex" required value="Male"> Male
+        <input type="radio" name="sex" required value="Female"> Female
+        <input type="radio" name="sex" required value="Unspecified"> Unspecified
     <p>
     
     Age:
-    <input type="number" name="age"><br>
+    <input type="number" required name="age"><br>
     
     <p>
     What is your diet?:
-        <select name="diet">
+        <select required name="diet">
         <option value="">Select Diet</option>
         <option value="LCHF">LCHF (20g to 120g carbs)</option>
         <option value="keto">Keto (less than 50g carbs)</option>
@@ -29,26 +29,26 @@
     <input type="number" name="hours_fasted">
     <p>
     Units of measurement:
-        <select name="units">
+        <select required name="units">
         <option value="">Select Units</option>    
         <option value="usa">mg/dL (Common for USA)</option>
         <option value="int">mmol/L (Common for International)</option>
         </select>
     <p>
     Total Cholesterol: 
-        <input type="number" step="0.1" name="total">
+        <input type="number" step="0.1" required min="0" max="1000" name="total">
     <p>
     LDL Cholesterol: 
-        <input type="number" step="0.1" name="ldl">
+        <input type="number" step="0.1" required min="0" max="1000" name="ldl">
     <p>
     HDL Cholesterol: 
-        <input type="number" step="0.1" name="hdl"> 
+        <input type="number" step="0.1" required min="0" max="1000" name="hdl"> 
     <p>
     Triglycerides: 
-        <input type="number" step="0.1" name="triglyt"> 
+        <input type="number" step="0.1" required min="0" max="1000" name="triglyt"> 
      <p>     
         How's your health? Give a value or estimate of your CRP:
-            <select name="crp">
+            <select required name="crp">
             <option value="">Select CRP</option>
             <option value="good">Below 1.0, I'm feeling healthy</option>
             <option value="normal">Between 1-3, I'm feeling OK</option>
