--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -1,21 +1,88 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Mypage</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+	<link href="style.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://m.w3newbie.com/you-tube.css">
+</head>
+<body>
+
+<!-- Navigation -->
+
+
+<!--- Image Slider -->
+
+
+<!--- Jumbotron -->
+
+
+<!--- Welcome Section -->
+
+
+<!--- Three Column Section -->
+
+
+<!--- Two Column Section -->
+
+
+<!--- Fixed background -->
+
+
+<!--- Emoji Section -->
+
+  
+<!--- Meet the team -->
+
+
+<!--- Cards -->
+
+
+<!--- Two Column Section -->
+
+
+<!--- Connect -->
+
+
+<!--- Footer -->
+
+
+
+
+</body>
+</html>
+
+
+
+
 {% if session.user_id %}
 <h2>Hello, {{ session.username  }}!</h2><br>
 Here are your labs:<br>
 <p>
 {% for labname in lab_names %}
-<a href="/results/{{ labname[0] }}">{{labname[0]}} <button type="submit" class="btn btn-default">Remove</button></a>
+<a href="/results/{{ labname[0] }}">{{ labname[1] }} </a> 
 <p>
 {% endfor %}
+<hr>
 Latest discussions: <br>
-<hr>
-{% for subject in topics %}
-<a href="/forum/{{ subject[0] }}">Subject: {{ subject[1] }}</a> <br>
-Created: {{ subject[2].strftime("%Y-%m-%d %H:%M:%S") }} <br>
-<hr>
-{% endfor %}
 
+{% for message in messages %}
+Topic: {{ message[1] }} <br>
+Latest post from {{ message[2] }}:<br>
+{{ message[3]}} <br>
+{{ message[4].strftime("%Y-%m-%d %H:%M:%S")  }}<br>
+<a href="/topic/{{ message[0] }}">Reply</a><br>
+{% endfor %}
+<hr>
 You can submit your labs and make queries<br>
 <a href="/submitlabs">Submit Labs</a> | <a href="/query">Make Queries</a> | <a href="/forum">Discuss </a> | <a href="/logout">Logout</a>
 {% else %}
 <a href="/login">Log in</a>
 {% endif %}
+{{ table }}
