--- a/templates/register.html
+++ b/templates/register.html
@@ -16,7 +16,7 @@
     <div class="field">
         <label for="username">Username:</label>
         <div class="control has-icons-left has-icons-right">
-        <input class="input" type="text" class="form-control" name="username">
+        <input required class="input" type="text" class="form-control" name="username" min="5" max="15">
         <span class="icon is-small is-left">
             <i class="fas fa-user"></i>
         </span>
@@ -26,7 +26,7 @@
         
         <label for="pwd">Password:</label>
         <p class="control has-icons-left">
-        <input class="input"  type="password" class="form-control" name="password">
+        <input required class="input"  type="password" class="form-control" name="password" min="5" max="30">
         <span class="icon is-small is-left">
             <i class="fas fa-lock"></i>
         </span>
