--- a/templates/results.html
+++ b/templates/results.html
@@ -1,17 +1,17 @@
 {% for result in lab_name %}
-<h3>{{ result[0] }}</h3>
-{{ result[1] }}<br>
-{{ result[2] }}<br>
-{{ result[3] }}<br>
-{{ result[4] }}<br>
-{{ result[5] }}<br>
-{{ result[6] }}<br>
-{{ result[7] }}<br>
-{{ result[8] }}<br>
-{{ result[9] }}<br>
-{{ result[10] }}<br>
-{{ apu }}
-{{ apu2 }}
+<h3>{{ result[1] }}</h3>
+Sex: {{ result[2] }}<br>
+Age: {{ result[3] }}<br>
+Diet: {{ result[4] }}<br>
+Hours Fasted: {{ result[5] }}<br>
+Units: {{ result[6] }}<br>
+Total Cholesterol: {{ result[7] }}<br>
+LDL Cholesterol: {{ result[8] }}<br>
+HDL Cholesterol: {{ result[9] }}<br>
+Triglycerides: {{ result[10] }}<br>
+CRP: {{ result[11] }}<br>
+<button type="submit" class="btn btn-default">Remove</button></a>
+
 <p></p>
 
 {% endfor %}
