--- a/templates/register.html
+++ b/templates/register.html
@@ -32,6 +32,6 @@
         </span>
     </div>    
 
-    <button type="submit" class="btn btn-default">Create account</button>
+    <button type="submit" class="btn btn-default">Create account</button> Already have an account? <a href="/login" style="color:#080808;">Login</a>
 
 </form>
