--- a/templates/forum.html
+++ b/templates/forum.html
@@ -1,20 +1,31 @@
-{% if session.user_id %}
-<h2>Hello, {{ session.username  }}!</h2><br>
+{% extends "layout.html" %}
+{% block title %}Forum{% endblock %}
+{% block navbar %}
+	<li class="nav-item active">
+		<a class="nav-link" href="/mypage">My Page</a>
+    </li>
+    <li class="nav-item active">
+		<a class="nav-link" href="/submitlabs">Submit Labs<span class="sr-only"></span></a>
+	</li>
+	<li class="nav-item active">
+		<a class="nav-link" href="/query">Make Queries<span class="sr-only"></span></a>
+	</li>
+{% endblock %}
+
+{% block content %}
+<h4>Hello, {{ session.username  }}!</h4><br>
 <p></p>
 <a href="/new">Start a new conversation</a>
 <hr>
 Latest discussions: <br>
 <hr>
 {% for message in messages %}
-Topic: {{ message[1] }} <br>
-Latest post: {{ message[3]}} from {{ message[2] }}<br>
-{{ message[4].strftime("%Y-%m-%d %H:%M:%S")  }}<br>
-<a href="/topic/{{ message[0] }}">Reply</a>
+<h5><a href="/topic/{{ message[0] }}">Topic: {{ message[1] }}</a></h5>
+Latest post: {{ message[3]}}<br>
+From {{ message[2] }}  {{ message[4].strftime("%Y-%m-%d %H:%M:%S")  }}<br>
+
 
 <hr>
 {% endfor %}
 
-<a href="/mypage">Mypage</a> | <a href="/submitlabs">Submit Labs</a> | <a href="/query">Make Queries</a> | <a href="/logout">Logout</a>
-{% else %}
-<a href="/login">Log in</a>
-{% endif %}
+{% endblock %}
