--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -1,41 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>My Page</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-</head>
-<body>
-	<!-- Navigation -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-    <div class="container-fluid">
-		   	
-        
-        
-            <ul class="navbar-nav ml-auto">
-				<a class="navbar-brand" href="#">
-					<img src="logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-					
-				  </a>
-                <li class="nav-item active">
-					<a class="nav-link" href="/submitlabs">Submit Labs</a>
-                </li>
-				<li class="nav-item active">
-					<a class="nav-link" href="/query">Make Queries<span class="sr-only"></span></a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="/forum">Forum<span class="sr-only"></span></a>
-				</li>
-            </ul>
-        
-    </div>
-</nav>
+{% extends "layout.html" %}
+{% block title %}My Page{% endblock %}
+{% block navbar %}
+	<li class="nav-item active">
+		<a class="nav-link" href="/submitlabs">Submit Labs</a>
+	</li>
+	<li class="nav-item active">
+		<a class="nav-link" href="/query">Make Queries<span class="sr-only"></span></a>
+	</li>
+	<li class="nav-item active">
+		<a class="nav-link" href="/forum">Forum<span class="sr-only"></span></a>
+	</li>
+{% endblock %}
 
-{% if session.user_id %}
+{% block content %}
 <div class="container-fluid">
 	<div class="text-left">
 		<h2>Welcome!</h2><br>
@@ -48,7 +25,7 @@
 			<svg width="6em" height="6em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
 			</svg> <br>
-			{{ session.username  }}<br>
+			<h4>{{ session.username  }}</h4>
 			
 			Age:<br>
 			Gender:<br>
@@ -91,7 +68,7 @@
 					<a href="/topic/{{ message[0] }}">Reply</a><br>
 					<hr>
 					{% endfor %} 
-					<hr>
+					
 				</div><!-- /.blog-sidebar -->
 			  </div><!-- /.blog-main -->
 			
@@ -99,19 +76,4 @@
 	</div> <!-- /.row -->
 
 </main><!-- /.container -->
-<nav class="navbar fixed-bottom navbar-right navbar-expand-sm navbar-dark bg-dark">
-	  <ul class="navbar-nav ml-auto">
-		<li class="nav-item active">
-		  <a class="nav-link"href="/logout">Logout<span class="sr-only"></span></a>
-		</li>
-	  </ul>
-</nav>
-{% else %}
-<a href="/login">Log in</a>
-{% endif %}
-
-
-		
-		
-</body>
-</html>
+{% endblock %}
