--- a/templates/new.html
+++ b/templates/new.html
@@ -1,21 +1,31 @@
-{% if session.user_id %}
+{% extends "layout.html" %}
+{% block title %}New Post{% endblock %}
+{% block navbar %}
+<li class="nav-item active">
+    <a class="nav-link" href="/mypage">My Page<span class="sr-only"></span></a>
+</li>
+<li class="nav-item active">
+	<a class="nav-link" href="/submitlabs">Submit Labs</a>
+</li>
+<li class="nav-item active">
+	<a class="nav-link" href="/query">Make Queries<span class="sr-only"></span></a>
+</li>
+{% endblock %}
+
+{% block content %}
 <form action="/send" method="POST">
     <header>
         <h3>Start a new converation</h3>
     </header>
     <p>
-        Give a subject for this message:<br>
-        <textarea name="topic" required rows="1" cols="30"></textarea>
+    Give a subject for this message:<br>
+    <textarea name="topic" required rows="1" cols="30"></textarea>
     </p>
     <p>
-        What is on your mind?<br>
-        <textarea name="content" required rows="4" cols="50"></textarea>
+    What is on your mind?<br>
+    <textarea name="content" required rows="4" cols="50"></textarea>
     </p>
-    
-            <input type="submit" value="Submit"> <a href="/mypage">Back</a>
-            <p>
-    </form>
-
-{% else %}
-<a href="/login">Log in</a>
-{% endif %}
+    <input type="submit" value="Submit"> <a href="/mypage">Back</a>
+    <p>
+</form>
+{% endblock %}
