Replying to messages added

--- a/templates/new.html
+++ b/templates/new.html
@@ -15,10 +15,10 @@
 {% block content %}
 <form action="/send" method="POST">
     <header>
-        <h3>Start a new converation</h3>
+        <h3>Start a new conversation</h3>
     </header>
     <p>
-    Give a subject for this message:<br>
+    Give a subject for this thread:<br>
     <textarea name="topic" required rows="1" cols="30"></textarea>
     </p>
     <p>
