--- a/templates/register.html
+++ b/templates/register.html
@@ -5,33 +5,35 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
    
-  </head>
-  <body>
+</head>
+<body>
     <section class="hero is-info is-fullheight">
-    <div class="container">
-        <div class="columns is-left">
-        <div class="column is-full">
-<form action="/register" method="post">
-    
-    <div class="field">
-        <label for="username">Username:</label>
-        <div class="control has-icons-left has-icons-right">
-        <input required class="input" type="text" class="form-control" name="username" min="5" max="15">
-        <span class="icon is-small is-left">
-            <i class="fas fa-user"></i>
-        </span>
-        </div>
-    </div>
-    <div class="field">
+        <div class="container">
+            <span class="align-middle">
+            <div class="columns is-left">
+                <div class="column is-full">
+                    <form action="/register" method="post">
+                        <div class="field">
+                            <label for="username">Username:</label>
+                            <div class="control has-icons-left has-icons-right">
+                            <input required class="input" type="text" class="form-control" name="username" min="5" max="15">
+                            <span class="icon is-small is-left">
+                                <i class="fas fa-user"></i>
+                            </span>
+                            </div>
+                        </div>
+                        <div class="field">
         
-        <label for="pwd">Password:</label>
-        <p class="control has-icons-left">
-        <input required class="input"  type="password" class="form-control" name="password" min="5" max="30">
-        <span class="icon is-small is-left">
-            <i class="fas fa-lock"></i>
-        </span>
-    </div>    
+                            <label for="pwd">Password:</label>
+                            <p class="control has-icons-left">
+                            <input required class="input"  type="password" class="form-control" name="password" min="5" max="30">
+                            <span class="icon is-small is-left">
+                                <i class="fas fa-lock"></i>
+                            </span>
+                        </div>    
 
-    <button type="submit" class="btn btn-default">Create account</button> Already have an account? <a href="/login" style="color:#080808;">Login</a>
+                        <button type="submit" class="btn btn-default">Create account</button> Already have an account? <a href="/login" style="color:#080808;">Login</a>
 
-</form>
+                    </form>
+            </span>
+</body>
